--- a/source/2013-02-08.html.markdown
+++ b/source/2013-02-08.html.markdown
@@ -5,19 +5,16 @@ tags:
 
 
 #A recap of your work pattern (days, hours, working alone / with others)
-days-started to work on the project on monday after 1pm
-hours-7 hours 12 hours 12 2 hours
-working alone 75% tried to work alone
-working with others: a few times, but when I had a question regarding the assignment
+4 days; avg. amount of hours: 8 to 9 hours; 75% worked alone/ only worked with others when I had questions.
 
 #Link to your code repository
 github.com/ronra/event_reporter.git
 
 #Summary of your results/conclusions
-Failed results due because of a wrong strategy. Next time, start early and ask questions early.
+Failed results because of a wrong strategy.
 
 #What worked and you’ll do the same next time
-Asking questions early
+Asking questions early.
 
 #What didn’t work and you’ll change next time
-the hours of working alone. Next time look to meet with a group to working on projects
+The hours of working alone. Next time will look to join a group to work on future projects.
